--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "mysql": "^2.15.0",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "vue-social-sharing": "^2.3.3"
   },
   "devDependencies": {
     "grunt": "^1.0.2",
